        - sqltargs respected correctly in deploy et al.
        - Added support for savepoints, and using them automatically in
          nested transactions if auto_savepoint is set in connect_info.
        - Changed naming scheme for constraints and keys in the sqlt parser;
          names should now be consistent and collision-free.

0.08010 2008-03-01 10:30
        - Fix t/94versioning.t so it passes with latest SQL::Translator

0.08009 2008-01-20 13:30
        - Made search_rs smarter about when to preserve the cache to fix
          mm prefetch usage
        - Added Storage::DBI subclass for MSSQL over ODBC. 
        - Added freeze, thaw and dclone methods to Schema so that thawed
          objects will get re-attached to the schema.
        - Moved dbicadmin to JSON::Any wrapped JSON.pm for a sane API
        - introduced DBIx::Class::set_inflated_columns
        - DBIx::Class::Row::copy uses set_inflated_columns

0.08008 2007-11-16 14:30:00
        - Fixed join merging bug (test from Zby)
        - When adding relationships, it will throw an exception if you get the
          foreign and self parts the wrong way round in the condition
        - ResultSetColumn::func() now returns all results if called in list
          context; this makes things like func('DISTINCT') work as expected
        - Many-to-many relationships now warn if the utility methods would 
          clash
        - InflateColumn::DateTime now accepts an extra parameter of timezone
          to set timezone on the DT object (thanks Sergio Salvi)
        - Added sqlt_deploy_hook to result classes so that indexes can be 
          added.
        - Added startup checks to warn loudly if we appear to be running on 
          RedHat systems from perl-5.8.8-10 and up that have the bless/overload
          patch applied (badly) which causes 2x -> 100x performance penalty.
          (Jon Schutz)
        - ResultSource::reverse_relationship_info can distinguish between 